[gd_scene load_steps=10 format=1]

[ext_resource path="res://scenes/moon.scn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player.scn" type="PackedScene" id=2]
[ext_resource path="res://scripts/spawner.gd" type="Script" id=3]
[ext_resource path="res://scenes/little_planet.scn" type="PackedScene" id=4]
[ext_resource path="res://sprites/background.png" type="Texture" id=5]
[ext_resource path="res://scenes/star.scn" type="PackedScene" id=6]
[ext_resource path="res://scenes/score.scn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

resource/name = "spawner_movement"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spawner_cheese:transform/pos")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 0, 80 ), Vector2( 0, 115 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "comet_spawn_move"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spawner_comet:transform/pos")
tracks/0/interp = 0
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Vector2( 195.016, -64.1279 ), Vector2( 194.86, -101.279 ), Vector2( 194.703, -138.43 ) ] }

[node name="main_scene" type="Node2D"]

transform/scale = Vector2( 2, 2 )

[node name="moon" parent="." instance=ExtResource( 1 )]

transform/pos = Vector2( 260.795, 268.473 )
transform/scale = Vector2( 0.347034, 0.347034 )
z/z = -1

[node name="player" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 258.647, 156.256 )
z/z = 1

[node name="spawner" type="Node2D" parent="."]

transform/pos = Vector2( 259.044, 258.267 )
transform/scale = Vector2( 1.29901, 1.29901 )
script/script = ExtResource( 3 )
dificulty = 5

[node name="spawner_hole" type="Position2D" parent="spawner"]

transform/pos = Vector2( 0, 76.3408 )
transform/rot = 180.0
transform/scale = Vector2( 0.1, 0.1 )

[node name="spawner_cheese" type="Position2D" parent="spawner"]

transform/pos = Vector2( 0, 91.4994 )
transform/rot = 180.0
transform/scale = Vector2( 0.1, 0.1 )

[node name="spawner_clock" type="Timer" parent="spawner"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="cheese_spawner_animator" type="AnimationPlayer" parent="spawner"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/spawner_movement = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "spawner_movement"

[node name="spawner_comet" type="Position2D" parent="spawner"]

transform/pos = Vector2( 194.703, -138.43 )
transform/scale = Vector2( 0.3, 0.3 )

[node name="clock_comet" type="Timer" parent="spawner"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="comet_spawner_animator" type="AnimationPlayer" parent="spawner"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/comet_spawn_move = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "comet_spawn_move"

[node name="little_planet" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 104.348, 237.771 )
transform/rot = 17.7
transform/scale = Vector2( -0.327585, -0.327585 )

[node name="planet" parent="little_planet"]

transform/pos = Vector2( 56.0703, 56.2523 )
transform/scale = Vector2( 0.817954, 0.817954 )
modulate = Color( 0.176396, 0.124359, 0.636719, 1 )

[node name="cloud_flat" parent="little_planet/planet"]

transform/pos = Vector2( -109.832, -38.9531 )
modulate = Color( 0, 0.5125, 0.640625, 1 )

[node name="cloud1 2" parent="little_planet/planet"]

modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud_flat1" parent="little_planet/planet"]

transform/pos = Vector2( 114.004, -32.6324 )
modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud_flat2" parent="little_planet/planet"]

transform/pos = Vector2( -66.1605, -137.343 )
modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud_flat3" parent="little_planet/planet"]

transform/pos = Vector2( 30.3379, 113.28 )
modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud_flat4" parent="little_planet/planet"]

transform/pos = Vector2( -124.803, 84.1761 )
modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud_flat5" parent="little_planet/planet"]

transform/pos = Vector2( -84.4436, 56.677 )
modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud13" parent="little_planet/planet"]

modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud_flat6" parent="little_planet/planet"]

transform/pos = Vector2( 57.401, 58.5201 )
modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud_flat7" parent="little_planet/planet"]

transform/pos = Vector2( -101.746, -5.87365 )
modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="cloud14" parent="little_planet/planet"]

modulate = Color( 0, 0.509804, 0.639216, 1 )

[node name="little_planet1" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 110.418, 66.5762 )
transform/rot = 12.7
transform/scale = Vector2( 0.146223, 0.146223 )

[node name="planet" parent="little_planet1"]

modulate = Color( 0.091217, 0.091217, 0.382813, 1 )

[node name="cloud_flat" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud1 2" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_flat1" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_flat2" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_flat3" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_flat4" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_flat5" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud13" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_flat6" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_flat7" parent="little_planet1/planet"]

modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud14" parent="little_planet1/planet"]

transform/pos = Vector2( -122.808, -24.9765 )
modulate = Color( 0, 0.2, 0.501961, 1 )

[node name="cloud_animator" parent="little_planet1/planet"]

playback/speed = 0.5

[node name="little_planet2" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 411.617, 97.853 )
transform/rot = -25.8
transform/scale = Vector2( 0.322517, 0.322517 )

[node name="planet" parent="little_planet2"]

modulate = Color( 0.129412, 0.266667, 0.470588, 1 )

[node name="cloud_flat" parent="little_planet2/planet"]

transform/pos = Vector2( -109.832, -38.9531 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud1 2" parent="little_planet2/planet"]

modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_flat1" parent="little_planet2/planet"]

transform/pos = Vector2( 114.004, -32.6324 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_flat2" parent="little_planet2/planet"]

transform/pos = Vector2( -66.1605, -137.343 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_flat3" parent="little_planet2/planet"]

transform/pos = Vector2( 30.3379, 113.28 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_flat4" parent="little_planet2/planet"]

transform/pos = Vector2( -124.803, 84.1761 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_flat5" parent="little_planet2/planet"]

transform/pos = Vector2( -84.4436, 56.677 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud13" parent="little_planet2/planet"]

modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_flat6" parent="little_planet2/planet"]

transform/pos = Vector2( 57.401, 58.5201 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_flat7" parent="little_planet2/planet"]

transform/pos = Vector2( -101.746, -5.87365 )
modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud14" parent="little_planet2/planet"]

modulate = Color( 0.215686, 0.443137, 0.784314, 1 )

[node name="cloud_animator" parent="little_planet2/planet"]

playback/speed = 0.75

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 256.26, 150.609 )
transform/scale = Vector2( 0.505521, 0.298284 )
z/z = -3
texture = ExtResource( 5 )
__meta__ = { "_edit_lock_":true, "_editor_collapsed":true }

[node name="star" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -143.346, -95.1913 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star1" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -201.724, -33.7928 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star2" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -147.819, -340.282 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star3" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -475.25, -187.518 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star4" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -399.863, -432.468 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star5" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 329.802, 215.119 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star6" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 314.715, 444.232 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star7" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 369.941, 289.603 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star8" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 280.424, 278.286 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star9" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 331.293, 336.703 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star10" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -71.7835, -148.252 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star11" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -208.462, 469.56 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star12" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 98.9882, -381.528 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star13" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 453.221, 382.433 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star14" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -347.64, -65.8925 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star15" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 446.646, 233.845 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star16" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 194.58, 179.981 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star17" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -150.64, 92.6857 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star18" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -185.71, -444.09 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star19" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -55.5864, -283.4 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star20" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 54.7461, -224.112 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="score_position" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 216.276, -1.69851 )
transform/scale = Vector2( 0.657506, 0.657506 )

[connection signal="timeout" from="spawner/spawner_clock" to="spawner" method="_on_spawner_clock_timeout"]

[connection signal="timeout" from="spawner/clock_comet" to="spawner" method="_on_clock_comet_timeout"]


[editable path="little_planet"]
[editable path="little_planet1"]
[editable path="little_planet2"]
