[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/spawner.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]

resource/name = "spawner_movement"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spawner_cheese:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 80 ), Vector2( 0, 115 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "comet_spawn_move"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spawner_comet:transform/pos")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 195.016, -64.1279 ), Vector2( 194.86, -101.279 ), Vector2( 194.703, -138.43 ) ]
}

[node name="spawner" type="Node2D"]

transform/pos = Vector2( 259.044, 258.267 )
transform/scale = Vector2( 1.29901, 1.29901 )
script/script = ExtResource( 1 )
dificulty = 5

[node name="spawner_hole" type="Position2D" parent="."]

transform/pos = Vector2( 0, 76.3408 )
transform/rot = 180.0
transform/scale = Vector2( 0.1, 0.1 )

[node name="spawner_cheese" type="Position2D" parent="."]

transform/pos = Vector2( 0, 91.4994 )
transform/rot = 180.0
transform/scale = Vector2( 0.1, 0.1 )

[node name="spawner_comet" type="Position2D" parent="."]

transform/pos = Vector2( 194.703, -138.43 )
transform/scale = Vector2( 0.3, 0.3 )

[node name="clock_holes" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="clock_cheese" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="clock_comet" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="cheese_spawner_animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/spawner_movement = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "spawner_movement"

[node name="comet_spawner_animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/comet_spawn_move = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "comet_spawn_move"

[connection signal="timeout" from="clock_holes" to="." method="_on_spawner_clock_timeout"]

[connection signal="timeout" from="clock_cheese" to="." method="_on_clock_cheese_timeout"]

[connection signal="timeout" from="clock_comet" to="." method="_on_clock_comet_timeout"]


